--- a/k8s/charts/seaweedfs/values.yaml
+++ b/k8s/charts/seaweedfs/values.yaml
@@ -5,7 +5,7 @@ global:
   repository: ""
   imageName: chrislusf/seaweedfs
   imagePullPolicy: IfNotPresent
-  imagePullSecrets: imagepullsecret
+  imagePullSecrets: ""
   restartPolicy: Always
   loggingLevel: 1
   enableSecurity: false
@@ -44,11 +44,11 @@ master:
   volumePreallocate: false
   volumeSizeLimitMB: 1000
   loggingOverrideLevel: null
-  #number of seconds between heartbeats, default 5
+  # number of seconds between heartbeats, default 5
   pulseSeconds: null
-  #threshold to vacuum and reclaim spaces, default 0.3 (30%)
+  # threshold to vacuum and reclaim spaces, default 0.3 (30%)
   garbageThreshold: null
-  #Prometheus push interval in seconds, default 15
+  # Prometheus push interval in seconds, default 15
   metricsIntervalSec: 15
   #  replication type is XYZ:
   # X number of replica in other data centers
@@ -112,10 +112,10 @@ master:
   # nodeSelector labels for master pod assignment, formatted as a muli-line string.
   # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
   # Example:
-  # nodeSelector: |
-  #   beta.kubernetes.io/arch: amd64
   nodeSelector: |
-    sw-backend: "true"
+    beta.kubernetes.io/arch: amd64
+  # nodeSelector: |
+  #   sw-backend: "true"
 
   # used to assign priority to master pods
   # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
@@ -251,10 +251,10 @@ volume:
   # nodeSelector labels for server pod assignment, formatted as a muli-line string.
   # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
   # Example:
-  # nodeSelector: |
-  #   beta.kubernetes.io/arch: amd64
   nodeSelector: |
-    sw-volume: "true"
+   beta.kubernetes.io/arch: amd64
+  # nodeSelector: |
+  #   sw-volume: "true"
 
   # used to assign priority to server pods
   # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
@@ -358,10 +358,10 @@ filer:
   # nodeSelector labels for server pod assignment, formatted as a muli-line string.
   # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
   # Example:
-  # nodeSelector: |
-  #   beta.kubernetes.io/arch: amd64
   nodeSelector: |
-    sw-backend: "true"
+    beta.kubernetes.io/arch: amd64
+  # nodeSelector: |
+  #   sw-backend: "true"
 
   # used to assign priority to server pods
   # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
@@ -389,7 +389,7 @@ filer:
 
   # extraEnvVars is a list of extra enviroment variables to set with the stateful set.
   extraEnvironmentVars:
-    WEED_MYSQL_ENABLED: "true"
+    WEED_MYSQL_ENABLED: "false"
     WEED_MYSQL_HOSTNAME: "mysql-db-host"
     WEED_MYSQL_PORT: "3306"
     WEED_MYSQL_DATABASE: "sw_database"
@@ -400,7 +400,7 @@ filer:
     # enable usage of memsql as filer backend
     WEED_MYSQL_INTERPOLATEPARAMS: "true"
     # if you want to use leveldb2, then should enable "enablePVC". or you may lose your data.
-    WEED_LEVELDB2_ENABLED: "false"
+    WEED_LEVELDB2_ENABLED: "true"
     # with http DELETE, by default the filer would check whether a folder is empty.
     # recursive_delete will delete all sub folders and files, similar to "rm -Rf"
     WEED_FILER_OPTIONS_RECURSIVE_DELETE: "false"
@@ -410,7 +410,7 @@ filer:
   s3:
     enabled: true
     port: 8333
-    #allow empty folders
+    # allow empty folders
     allowEmptyFolder: false
     # Suffix of the host name, {bucket}.{domainName}
     domainName: ""
@@ -430,7 +430,7 @@ s3:
   port: 8333
   metricsPort: 9327
   loggingOverrideLevel: null
-  #allow empty folders
+  # allow empty folders
   allowEmptyFolder: true
   # enable user & permission to s3 (need to inject to all services)
   enableAuth: false
@@ -449,7 +449,7 @@ s3:
   # should map directly to the value of the resources field for a PodSpec,
   # formatted as a multi-line string. By default no direct resource request
   # is made.
-  resources: null
+  resources: {}
 
   # Toleration Settings for server pods
   # This should be a multi-line string matching the Toleration array
@@ -459,10 +459,10 @@ s3:
   # nodeSelector labels for server pod assignment, formatted as a muli-line string.
   # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
   # Example:
-  # nodeSelector: |
-  #   beta.kubernetes.io/arch: amd64
   nodeSelector: |
-    sw-backend: "true"
+    beta.kubernetes.io/arch: amd64
+  # nodeSelector: |
+  #   sw-backend: "true"
 
   # used to assign priority to server pods
   # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
@@ -479,5 +479,5 @@ certificates:
   ipAddresses: []
   keyAlgorithm: rsa
   keySize: 2048
-  duration: 2160h # 90d
-  renewBefore: 360h # 15d
+  duration: 2160h  # 90d
+  renewBefore: 360h  # 15d
