--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.46"
+    created: "2023-04-17T05:01:50.181994233Z"
+    description: SeaweedFS
+    digest: 8cbdd6e17e9d828e4935280b504672c9888093d686b841c78511cd575d399b7f
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.46.tgz
+    version: "3.46"
+  - apiVersion: v1
     appVersion: "3.45"
     created: "2023-04-03T05:56:34.174881818Z"
     description: SeaweedFS
@@ -37,4 +46,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2023-04-03T05:56:34.170714306Z"
+generated: "2023-04-17T05:01:50.178470594Z"
