--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.49"
+    created: "2023-05-07T21:03:07.945428911Z"
+    description: SeaweedFS
+    digest: ce03b3ccadcbeb82e07af0ee7c70ebba00465e62ca576a1037a72539a4efd174
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.49.tgz
+    version: "3.49"
+  - apiVersion: v1
     appVersion: "3.48"
     created: "2023-05-01T05:25:58.499697652Z"
     description: SeaweedFS
@@ -64,4 +73,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2023-05-01T05:25:58.496352208Z"
+generated: "2023-05-07T21:03:07.943066244Z"
