Feat: support username/password authentication for etcd filer store seaweedfs/seaweedfs#4262

--- a/weed/command/scaffold/filer.toml
+++ b/weed/command/scaffold/filer.toml
@@ -262,6 +262,8 @@ routeByLatency = false
 [etcd]
 enabled = false
 servers = "localhost:2379"
+username = ""
+password = ""
 timeout = "3s"
 
 [mongodb]
