Feat: etcd filer store keys should have customizable prefix
An etcd cluster is not necessarily only dedicated to seaweedfs.
This security enhancement adds a customizable key_prefix option to the etcd filer store.
This will allow an etcd cluster administrator to limit the seaweedfs etcd user to only read/write a subset of keys under the
key_prefix, instead of all keys on the etcd cluster.

--- a/weed/command/scaffold/filer.toml
+++ b/weed/command/scaffold/filer.toml
@@ -264,6 +264,7 @@ enabled = false
 servers = "localhost:2379"
 username = ""
 password = ""
+key_prefix = "seaweedfs."
 timeout = "3s"
 
 [mongodb]
