--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.51"
+    created: "2023-05-22T06:50:17.212340924Z"
+    description: SeaweedFS
+    digest: 7d63ab74f37d942dc06391e88a9bde874625adfaa4dbad8f496926a7c4cb6532
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.51.tgz
+    version: "3.51"
+  - apiVersion: v1
     appVersion: "3.49"
     created: "2023-05-10T06:46:06.353635898Z"
     description: SeaweedFS
@@ -73,4 +82,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2023-05-10T06:46:06.350228325Z"
+generated: "2023-05-22T06:50:17.209198515Z"
