--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.54"
+    created: "2023-07-17T05:58:33.033577346Z"
+    description: SeaweedFS
+    digest: bc9b5ab8d1b3b0d2402ec9bf2ea39bbded00805f260003ca31efbd8a50cce50d
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.54.tgz
+    version: "3.54"
+  - apiVersion: v1
     appVersion: "3.53"
     created: "2023-06-26T06:02:57.037402402Z"
     description: SeaweedFS
@@ -100,4 +109,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2023-06-26T06:02:57.034148225Z"
+generated: "2023-07-17T05:58:33.030665832Z"
