fix bugs: seaweedfs hem charts ignore the master ingress configuration

--- a/k8s/charts/seaweedfs/templates/ingress.yaml
+++ b/k8s/charts/seaweedfs/templates/ingress.yaml
@@ -52,7 +52,8 @@ metadata:
 spec:
   ingressClassName: {{ .Values.master.ingress.className | quote }}
   rules:
-  - http:
+  - host: {{ .Values.master.ingress.host }}
+    http:
       paths:
       - path: /sw-master/?(.*)
         pathType: ImplementationSpecific
