--- a/docker/compose/local-brokers-compose.yml
+++ b/docker/compose/local-brokers-compose.yml
@@ -85,6 +85,7 @@ services:
       - master2
       - volume1
       - volume2
+      - filer1
   broker1:
     image: chrislusf/seaweedfs:local
     ports:
