--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.66"
+    created: "2024-05-06T05:48:15.672611842Z"
+    description: SeaweedFS
+    digest: 81b3ad224cb5a230b174c1fd11e516c357d10f4f97a09622b962c49028e0e0d8
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.66.0.tgz
+    version: 3.66.0
+  - apiVersion: v1
     appVersion: "3.65"
     created: "2024-04-28T18:46:07.524709876Z"
     description: SeaweedFS
@@ -262,4 +271,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2024-04-28T18:46:07.522650647Z"
+generated: "2024-05-06T05:48:15.670659073Z"
