--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.74"
+    created: "2024-09-30T18:30:00.888953619Z"
+    description: SeaweedFS
+    digest: 1f3ea70393cca0bd0362b28320f592c32a4a3f6ea46fc305a480f4a784129397
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-4.0.2.tgz
+    version: 4.0.2
+  - apiVersion: v1
     appVersion: "3.73"
     created: "2024-09-12T20:20:25.836554419Z"
     description: SeaweedFS
@@ -298,4 +307,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2024-09-12T20:20:25.834309852Z"
+generated: "2024-09-30T18:30:00.885967414Z"
