[helm] Allow setting notification.toml config

--- a/k8s/charts/seaweedfs/templates/filer-statefulset.yaml
+++ b/k8s/charts/seaweedfs/templates/filer-statefulset.yaml
@@ -234,6 +234,10 @@ spec:
             - name: data-filer
               mountPath: /data
             {{- end }}
+            - name: notification-config
+              readOnly: true
+              mountPath: /etc/seaweedfs/notification.toml
+              subPath: notification.toml
             {{- if .Values.global.enableSecurity }}
             - name: security-config
               readOnly: true
@@ -349,6 +353,9 @@ spec:
             secretName: seaweedfs-s3-secret
             {{- end }}
         {{- end }}
+        - name: notification-config
+          configMap:
+            name: {{ template "seaweedfs.name" . }}-notification-config
         {{- if .Values.global.enableSecurity }}
         - name: security-config
           configMap:
