[helm] Set notification config conditionally

--- a/k8s/charts/seaweedfs/templates/filer-statefulset.yaml
+++ b/k8s/charts/seaweedfs/templates/filer-statefulset.yaml
@@ -234,10 +234,12 @@ spec:
             - name: data-filer
               mountPath: /data
             {{- end }}
+            {{- if .Values.filer.notificationConfig }}
             - name: notification-config
               readOnly: true
               mountPath: /etc/seaweedfs/notification.toml
               subPath: notification.toml
+            {{- end }}
             {{- if .Values.global.enableSecurity }}
             - name: security-config
               readOnly: true
@@ -353,9 +355,11 @@ spec:
             secretName: seaweedfs-s3-secret
             {{- end }}
         {{- end }}
+        {{- if .Values.filer.notificationConfig }}
         - name: notification-config
           configMap:
             name: {{ template "seaweedfs.name" . }}-notification-config
+        {{- end }}
         {{- if .Values.global.enableSecurity }}
         - name: security-config
           configMap:
