--- a/k8s/charts/seaweedfs/templates/notification-configmap.yaml
+++ b/k8s/charts/seaweedfs/templates/notification-configmap.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.filer.enabled }}
+{{- if and .Values.filer.enabled .Values.filer.notificationConfig }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
